# twitch_chat_client

./: Cargo.toml  config.toml  flake.nix
res/: badges.json
schemas/: seventv.json
src/: chat.rs  cli.rs  components.rs  config.rs  config_ui.rs  main.rs  operation.rs  platform.rs  title_bar.rs  util.rs  widget.rs
src/components/: join_popup.rs
src/platform/: betterttv.rs  frankerfacez.rs  recent_messages.rs  seventv.rs  twitch.rs
src/platform/seventv/: emotes_by_twitch_id.graphql  eventapi.rs
src/widget/: animated.rs  draggable.rs  icon_button.rs  overlaid.rs  scrollie.rs  tab.rs  tabs.rs
