[package]
name = "juliarino_iced"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-once-cell = "0.5.4"
bitflags = "2.10.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
either = { version = "1.15.0", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
graphql_client = "0.16"
hashbrown = "0.16"
indexmap = "2.13"
itertools = "0.14"
libc = "0.2"
log = "0.4"
mimalloc = "0.1"
moka = { version = "0.12", features = ["future", "sync"] }
open = "5.3"
palette = "0.7"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.20"
tokio = { version = "1.49", features = ["sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls", "tokio-rustls"] }
toml = { version = "0.9.11", features = ["serde"] }
ulid = { version = "1.2", features = ["serde"] }
url = "2.5.8"

[dependencies.iced]
version = "0.14"
features = ["tokio", "advanced", "svg", "image", "lazy"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["gif", "png", "webp", "avif", "jpeg"]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "http2", "rustls-no-provider", "charset", "gzip", "brotli", "deflate"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["log", "logging", "ring", "std", "tls12"]

[dependencies.twixel_core]
git = "https://github.com/juliapixel/twixel_rs"
branch = "feat/message-rework"
# path = "../twixel_rs/twixel_core"
features = ["connection", "rustls", "chrono"]

[profile.release]
strip = "none"
# lto = "fat"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["iced/debug"]
unstable = []
